# asyncop

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
docs/: async_op_doc.md
examples/: CMakeLists.txt  example_callback_conversion.cpp  example_message_registry.cpp  example_qt_http.cpp
include/: ao_event_loop.hpp  async_op.hpp  async_op_void.hpp  msg_registry.hpp
tests/: CMakeLists.txt  test_asyncop.cpp  testmain_glib.cpp  testmain_qt.cpp
